# ClanOS

./: .gitignore  CHARTER.md  CONTRIBUTING.md  Cargo.toml  DECISION_LOG.md  GLOSSARY.toml  README.md  SCOPE_FREEZE.md  SECURITY.md  STATUS.md  architecture_state.toml  compat_test_corpus.toml  epoch_checklist.toml  gap_registry.toml  health_timeseries.json  kani_harness_registry.toml  loom_harness_registry.toml  never_stabilize_graduated.toml  phase_checklist_schema.toml  phase_snapshots.toml  prereq_graph.toml  scope_checklist_schema.toml  scope_snapshots.toml
.cargo/: config.toml
benchmarks/: phase-120-baseline.json  scope-120-baseline.json
config/: README.md  desktop_framebuffer.toml  loader_digest_only_allowlist.toml  loader_signing_policy.toml  migration_baselines.json  track1_scope_freeze.toml  trust_anchor_epoch450.toml  trust_anchor_epoch460_loader.toml
docs/: ABI_ARES_RT.md  ABI_ASYNC.md  ABI_CLAN_RT.md  ABI_COMPOSITOR_IPC.md  ABI_DRIVER.md  ABI_IPC.md  ABI_MEMORY.md  ABI_NATIVE_SYSCALL.md  ABI_RUNTIME.md  ABI_SECURITY.md  ABI_STABILITY.md  ABI_SYSCALL.md  ARCHITECTURE_TARGETS.md  AUDIT_SUBSYSTEM.md  AXIOMS.md  BUILD_INTEGRITY.md  CAP_REGISTRY.toml  CAP_TRANSFER_PROTOCOL.md  COMPAT_ISOLATION.md  COMPAT_SUNSET.md  DECISION_LOG.md  DEMAND_PAGING.md  DEPENDENCY_POLICY.md  DESIGN_NORTH_STAR.md  DEVICES.md  DRIVER_MODEL.md  EPOCH3_IPC_PLAN.md  EPOCH4_NETWORK_PLAN.md  EPOCH5_SCHEDULER_GUI_PLAN.md  EPOCH_FAILURE_PROCEDURE.md  ERROR_TAXONOMY.md  FORMAL_MODEL.md  (+768 more)
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: address_space.rs  allocator.rs  audit_wire.rs  bga.rs  block.rs  block_cache.rs  boot_gate.rs  boundary_gate.rs  buddy.rs  build_integrity.rs  checkpoint.rs  clipboard_broker.rs  compat_socket.rs  compositor.rs  corpus_runner.rs  cow_fork.rs  demand_paging.rs  desktop_runtime.rs  desktop_shell.rs  device.rs  device_broker.rs  driver_host.rs  elf_reloc.rs  embedded_hello_alloc.rs  embedded_mendo.rs  embedded_programs.rs  embedded_ring3_io_demo.rs  embedded_sig_demo.rs  exec_image.rs  ext2.rs  fd_table.rs  federation.rs  frame_backing.rs  frame_ownership.rs  framebuffer.rs  gdt.rs  governance.rs  image_digest.rs  interrupts.rs  ipc_endpoints.rs  (+54 more)
kernel/src/performance/: metrics.rs  process_metrics.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  process.rs  program_loader.rs  scheduler.rs  timer.rs  userspace.rs
kernel/tests/: loader_signed_exec_integration.rs  preemption_integration.rs  signed_elf_integration.rs
proof-rights/: Cargo.toml
proof-rights/.cargo/: config.toml
proof-rights/src/: lib.rs
userland/: Cargo.toml
userland/hello-alloc/: Cargo.toml
userland/hello-alloc/src/: main.rs
userland/mendo/: Cargo.toml  linker.ld
userland/mendo/.cargo/: config.toml
userland/mendo/src/: interp.rs  lexer.rs  main.rs  parser.rs  syscall.rs
userland/ring3-io-demo/: Cargo.toml
userland/ring3-io-demo/src/: main.rs  syscall.rs
userland/sig-demo/: Cargo.toml
userland/sig-demo/src/: main.rs
userland/src/: heap.rs  lib.rs  ring3_syscall.rs  syscalls.rs
(+363 files in other folders)
