[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[lib]
name = "kernel"
path = "src/lib.rs"
doctest = false

[features]
default = []
# Production preemptive scheduling (preemption lab + CI soak)
preemption = []
# Real syscall/sysret user probe (QEMU boot only; omitted from host integration tests).
hw-sysret-probe = []

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
uart_16550 = "0.2"
spin = "0.9"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.10"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
sha2 = { version = "0.9.9", default-features = false, features = ["force-soft"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }

[package.metadata.bootimage]
run-command = [
	"qemu-system-x86_64",
	"-drive",
	"format=raw,file={}",
	"-serial",
	"stdio",
	"-display",
	"none",
]
run-args = ["-no-reboot"]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
]
test-success-exit-code = 33
test-timeout = 300
