[package]
name = "clan-rt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Clan OS userspace runtime (epoch 2)"

[lib]
name = "clan_rt"
path = "src/lib.rs"

[features]
host-std = []
ring3 = []
ring3-heap = ["ring3"]

[[bin]]
name = "demo-hello"
path = "src/bin/demo_hello.rs"
required-features = ["host-std"]

[dependencies]
